fix: temporary fix for z-indexes in staging

--- a/packages/ui/src/components/css/loo-list-item.module.css
+++ b/packages/ui/src/components/css/loo-list-item.module.css
@@ -20,7 +20,6 @@
 	border-radius: 0.5rem 0 0;
 	color: #fff;
 	background-color: #1a1a1a;
-	z-index: 1055;
 }
 
 .link {
